dnl Process this file with autoconf to produce a configure script.
AC_INIT(openssl_cert.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_RANLIB

AC_MINGW32

AC_ARG_WITH(openssl,
  [  --with-openssl=DIR      location of OPENSSL files],
  [ OPENSSL="$withval" ],
  [ OPENSSL="../../openssl" ]
)
AC_SUBST(OPENSSL)

export LIBRARY_PATH="$OPENSSL/lib"

dnl Checks for libraries.
AC_CHECK_LIB(gdi32, main)
AC_CHECK_LIB(crypto, MD5_Init)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir strerror)

AC_OUTPUT(Makefile.lib)
