dnl Process this file with autoconf to produce a configure script.

dnl Get the version from the source
majver=`grep "#define TQSLLIB_VERSION_MAJOR" tqsllib.cpp | cut -d ' ' -f 3`
minver=`grep "#define TQSLLIB_VERSION_MINOR" tqsllib.cpp | cut -d ' ' -f 3`
version="$majver.$minver"

AC_INIT(tqsllib, 2.0, lotw-help@arrl.org)
AC_CONFIG_HEADERS(sysconfig.h)
AC_CANONICAL_HOST
AC_CONFIG_SRCDIR(tqsllib.cpp)

AM_INIT_AUTOMAKE

TQSLLIB_VERSION_MAJOR=`echo $VERSION | sed -e 's/\..*//'`
TQSLLIB_VERSION_MINOR=`echo $VERSION | sed -e 's/.*\.//'`
AC_DEFINE_UNQUOTED(TQSLLIB_VERSION_MAJOR, $TQSLLIB_VERSION_MAJOR, [Major version number])
AC_DEFINE_UNQUOTED(TQSLLIB_VERSION_MINOR, $TQSLLIB_VERSION_MINOR, [Minor version number])

dnl Set defines for platforms

add_libraries=
app_library="libtqsllib.la"
dyn_lib_suf=".so"

case "$build_os" in
  darwin*) platform="-DMAC -I/Developer/Headers/FlatCarbon"
    ldflags="-framework Carbon -framework System"
	dyn_lib_suf=".dylib"
    ;;
  mingw32) platform=-DWINDOWS
    add_libraries="libtqsllibd.a"
	app_library="libtqsllibd.a"
    ;;
esac

AC_SUBST(platform)
AC_SUBST(ldflags)
AC_SUBST(add_libraries)
AC_SUBST(app_library)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_MSG_CHECKING([for --enable-docs])
AC_ARG_ENABLE(docs,
	[AC_HELP_STRING([--enable-docs], [enable installation of text documents])],
	[case "${enableval}" in
		yes) docok=yes ;;
		no) docok=no ;;
		*) AC_MSG_ERROR([bad value (${enableval}) for --enable-docs]) ;;
	esac],[docok=yes])
AC_MSG_RESULT($docok)
AM_CONDITIONAL(NODOC, test x$docok = xno)

checkssldir(){
  if test -z "$OPENSSL"; then
    if test -e "$1/lib/libcrypto.a" || test -e "$1/lib/libcrypto$dyn_lib_suf"; then
      OPENSSL="$1"
    fi
  fi
}

checkexpatdir(){
  if test -z "$EXPAT"; then
    if test -e "$1/lib/libexpat.a" || test -e "$1/lib/libexpat$dyn_lib_suf"; then
      EXPAT="$1"
    fi
  fi
}

checkzlibdir(){
  if test -z "$ZLIB"; then
    if test -e "$1/lib/libz.a" || test -e "$1/lib/libz$dyn_lib_suf"; then
      ZLIB="$1"
    fi
  fi
}

dnl Check for OpenSSL
AC_MSG_CHECKING([for OpenSSL library (libcrypto.a)])
AC_ARG_WITH(openssl,
  [AC_HELP_STRING([--with-openssl=DIR], [location of OpenSSL files])],
  [ checkssldir "$withval" ],
  [ checkssldir "$HOME/openssl"; checkssldir "/usr"; checkssldir "/usr/local";
    checkssldir "/usr/local/ssl"; checkssldir "../../openssl" ]
)
if test -z "$OPENSSL"; then
  AC_MSG_RESULT(Not found)
  echo
  echo "OpenSSL not found"
  echo "Use --with-openssl option to fix this problem"
  echo
  exit 1
fi
AC_MSG_RESULT($OPENSSL)
AC_SUBST(OPENSSL)

dnl Check for an openssl header file
AC_MSG_CHECKING([for OpenSSL headers in $OPENSSL/include])
if test ! -r "$OPENSSL/include/openssl/opensslv.h"; then
  AC_MSG_RESULT(Not found)
  echo
  echo OpenSSL headers appear to be mising
  echo
  exit 1
fi
AC_MSG_RESULT(yes)

dnl Check for expat
AC_MSG_CHECKING([for expat library (libexpat.a)])
AC_ARG_WITH(expat,
  [AC_HELP_STRING([--with-expat=DIR], [location of expat library files])],
  [ checkexpatdir "$withval" ],
  [ checkexpatdir "$HOME/expat"; checkexpatdir "/usr"; checkexpatdir "/usr/local";
    checkexpatdir "../../expat" ]
)
if test -z "$EXPAT"; then
  AC_MSG_RESULT(Not found)
  echo
  echo "expat not found"
  echo "Use --with-expat option to fix this problem"
  echo
  exit 1
fi
AC_MSG_RESULT($EXPAT)
AC_SUBST(EXPAT)

dnl Check for zlib
AC_MSG_CHECKING([for zlib library (libz.a)])
AC_ARG_WITH(zlib,
  [AC_HELP_STRING([--with-zlib=DIR], [location of zlib library files])],
  [ checkzlibdir "$withval" ],
  [ checkzlibdir "$HOME/zlib"; checkzlibdir "/usr"; checkzlibdir "/usr/local";
    checkzlibdir "../../zlib" ]
)
if test -z "$ZLIB"; then
  AC_MSG_RESULT(Not found)
  echo
  echo "zlib not found"
  echo "Use --with-zlib option to fix this problem"
  echo
  exit 1
fi
AC_MSG_RESULT($ZLIB)
AC_SUBST(ZLIB)

dnl Check for an expat header file
AC_MSG_CHECKING([for expat headers in $EXPAT/include])
if test ! -r "$EXPAT/include/expat.h"; then
  AC_MSG_RESULT(Not found)
  echo
  echo expat headers appear to be mising
  echo
  exit 1
fi
AC_MSG_RESULT(yes)

export LIBRARY_PATH="$OPENSSL/lib:$EXPAT/lib:$ZLIB/lib"

dnl Checks for libraries.
AC_CHECK_LIB(gdi32, main)
AC_CHECK_LIB(crypto, MD5_Init)
AC_CHECK_LIB(expat, XML_ParserCreate)
AC_CHECK_LIB(z, gzopen)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Check for headers
AC_CHECK_HEADERS(getopt.h)

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir strerror snprintf)

extra_prog="gen_crq load_cert station_loc converter"

AC_ARG_ENABLE(extra,
  [AC_HELP_STRING([--enable-extra=LIST], [build extra test programs])],
  [
    if test "$enableval" != "no"; then
      if test "$enableval" = "yes"; then make_extra="$extra_prog"; else make_extra="$enableval"; fi
      echo "Also making $make_extra"
    fi
  ]
)
AC_SUBST(make_extra)

AC_OUTPUT(Makefile tqsllib.spec)
